first website version by elliot

--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>VOODOOHOP - Tour Dates</title>
-    <link href="index.html" rel="canonical" />
-    <meta content="Home" name="description" />
+    <title>VOODOOHOP - Contact</title>
+    <link href="contact.html" rel="canonical" />
+    <meta content="voodoohop contact" name="description" />
     <meta content="en" name="language" />
     <meta charset="utf-8" />
     <script type="text/javascript">
@@ -16,7 +16,7 @@
             "applicationID": "4943355",
             "transactionName": "egkLTUcMD1xdRUxGUV4DFhZcDQdVQA==",
             "queueTime": 1,
-            "applicationTime": 74,
+            "applicationTime": 81,
             "agent": ""
         }
     </script>
@@ -263,14 +263,14 @@
     <link rel="stylesheet" media="all" href="https://c9905acc1d7b5a526f7c-ece02171884dce8c4b3a1e6d28a03a59.ssl.cf1.rackcdn.com/assets/themes/classic/application-dfc62f0a2b66d0cd0515f9276d997dfc.css" />
     <link rel="stylesheet" media="all" href="https://e05f433bf807fec52f1b-8b78f4a1c3cecae8e875354bda80d3db.ssl.cf1.rackcdn.com/57cf10d901e2a768677055b9/custom_57cf10d901e2a768677055b9.css" />
     <meta name="csrf-param" content="authenticity_token" />
-    <meta name="csrf-token" content="CGlO3icARX4DfkOXqFeKeMiOYH6+VanI6cABQ7b97pMaX0Y2JUa5gCnYd6hDu0rHrLt69pW6MYVZK/x9MmCjZw==" />
+    <meta name="csrf-token" content="7nL4hJMK3WlecimWaj0jRAuvn8HVWj8TxpiN8sOQXj5dgBRYijchfxU1q6QpeowdyfvwPQkwhdNcepg/dAnHMQ==" />
 </head>
 
 <body>
     <div class="bodyBackground">
         <div class="bodyBackgroundContainer">
             <header>
-                <section class="bgSection pi-text-light-shadowed spacing-top-2 spacing-bottom-2" style="background-position: top center; background-repeat:no-repeat; -webkit-background-size: cover; -o-background-size: cover; moz-background-size: cover; background-size: cover;background-image:  url('img/header.jpg')">
+                <section class="bgSection pi-text-light-shadowed spacing-top-2 spacing-bottom-2" style="background-position: top center; background-repeat:no-repeat; -webkit-background-size: cover; -o-background-size: cover; moz-background-size: cover; background-size: cover; background-image: url('img/header.jpg')">
                     <div class="bgSectionBackgroundColor" style="; opacity:1"></div>
                     <div class="container">
                         <div class="row">
@@ -301,47 +301,38 @@
                 </section>
             </header>
             <div class="mainContent">
-                <section class="bgSection pi-text-light-shadowed pi-background-mainColor spacing-top-1 spacing-bottom-60" style="">
+                <section class="bgSection pi-text-light-shadowed pi-background-mainColor spacing-top-1 spacing-bottom-1" style="">
                     <div class="bgSectionBackgroundColor pi-text-light-shadowed pi-background-mainColor" style="; opacity:1"></div>
                     <div class="container">
                         <div class="row">
                             <div class="span12">
-                                <div>
-                                    <div class="row">
-                                        <div class="span2">
-                                            <div class="widgetContainer">
-                                                <div class="spacer" style="height:10px"></div>
-                                            </div>
-                                        </div>
-                                        <div class="span8">
-                                            <div class="widgetContainer">
-                                                <div class="imageContainer">
-                                                    <div class="noLinkImage"><img alt="voodoohop1" src="img/voodoohop1.jpg"></div>
+                                <div class="widgetContainer">
+                                    <div class="spaceContainer xl"></div>
+                                </div>
+                                <div class="widgetContainer">
+                                    <div class="textContainer">
+                                        <h3 class="wysiwyg-text-align-center"><b>VOODOOHOP</b></h3>
+                                        <h4 class="wysiwyg-text-align-center"><b>booking@voodoohop.com</b></h4>
+                                        <p>
+                                            <br>
+                                        </p>
+                                        <div>
+                                            <div>
+                                                <div>
+                                                    <div>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            <div class="widgetContainer">
-                                                <div class="textContainer">
-                                                    <h4 class="wysiwyg-text-align-left"><strong></strong>VOODOOHOP is an outlandish art collective born from a series of underground parties and is now a striking artistic movement in Brazil. Through 6 years of collaborative events, Voodoohop has gathered a myriad of artists from different disciplines with the likes of Djs, live performers, dancers and visual artists. Together they have created a multi sensory tropical cabaret, mixing colourful and exuberant visuals, combined with elements of Brasilian traditional heritage and ritualistic performance. Nomadic in nature, the collective has transformed spaces ranging from abandoned buildings to natural hideaways. Always experimenting with different media and formats, Voodoohop is in constant flux.</h4></div>
-                                            </div>
-                                        </div>
-                                        <div class="span2">
-                                            <div class="widgetContainer">
-                                                <div class="spacer" style="height:10px"></div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="widgetContainer">
-                                    <div class="spaceContainer m"></div>
+                                    <div class="imageContainer">
+                                        <div class="noLinkImage"><img alt="voodoohop2" src="img/voodoohop2.jpg"></div>
+                                    </div>
                                 </div>
                                 <div class="widgetContainer">
-                                    <div class="textContainer">
-                                        <p><strong></strong></p>
-                                        <h4><b>DATES</b></h4>
-                                        <p><b><br></b></p>
-                                        <h4 class="wysiwyg-text-align-left"><b></b><b>5.11.2016 &nbsp;-&nbsp;&nbsp;San Francisco,&nbsp;USA </b>&nbsp;- &nbsp;Dodecahedron Club,&nbsp;1570 Stockton St.</h4>
-                                        <h4 class="wysiwyg-text-align-left"><b>8.11.2016 &nbsp;- &nbsp;San Francisco,&nbsp;USA</b> &nbsp;- &nbsp;Psychedelic Pool,&nbsp;3457 Sherou St.</h4>
-                                        <h4 class="wysiwyg-text-align-left"><br></h4></div>
+                                    <div class="spaceContainer xl"></div>
                                 </div>
                             </div>
                         </div>
