--- a/index.html
+++ b/index.html
@@ -339,8 +339,9 @@
                                         <p><strong></strong></p>
                                         <h4><b>DATES</b></h4>
                                         <p><b><br></b></p>
-                                        <h4 class="wysiwyg-text-align-left"><b></b><b>5.11.2016 &nbsp;-&nbsp;&nbsp;San Francisco,&nbsp;USA </b>&nbsp;- &nbsp;Dodecahedron Club,&nbsp;1570 Stockton St.</h4>
-                                        <h4 class="wysiwyg-text-align-left"><b>8.11.2016 &nbsp;- &nbsp;San Francisco,&nbsp;USA</b> &nbsp;- &nbsp;Psychedelic Pool,&nbsp;3457 Sherou St.</h4>
+                                        <h4 class="wysiwyg-text-align-left"><b></b><b>November 2016 - USA / Mexico</h4>
+                                        <h4 class="wysiwyg-text-align-left"><b>December 2016 - Mexico / Colombia / Ecuador / Peru</h4>
+                                        <h4 class="wysiwyg-text-align-left"><b>January 2017 - Colombia / Brasil</h4>
                                         <h4 class="wysiwyg-text-align-left"><br></h4></div>
                                 </div>
                             </div>
