el fo description 2

--- a/collective.html
+++ b/collective.html
@@ -391,7 +391,7 @@ For the American Tour projects the colletctive shows its face through the musica
                                     <div class="textContainer">
                                         <p><strong></strong></p>
                                         <h4 class="wysiwyg-text-align-justify">Mind bended by music at very early age, El Fo spends too much time exploring its unboundedness, guided by his deep curiosity, hunting sonorities everywhere and non stop. He could be a whole encyclopedia and maybe he is. His vast research shows itself in his crazy big selections of really specific styles of music.</h4>
-                                        <h4>Formally sound engineer in France, El Fo moved to Brasil in 2012 where he got fished by the Voodoohop gang as a first sight match as El Fo was already swimming inside random psychedelic musical choices, so common on this group spirit.</h4>
+                                        <h4>Formally sound engineer in France, El Fo moved to Brasil in 2012 where he got fished by the Voodoohop gang as a first sight match since El Fo was already swimming inside random psychedelic musical choices, so common on this group spirit.</h4>
                                     </div>
                                 </div>
                             </div>
