--- a/collective.html
+++ b/collective.html
@@ -372,7 +372,7 @@ For the American Tour projects the colletctive shows its face through the musica
                                     <div class="textContainer">
                                         <p><strong></strong></p>
                                         <h4 class="wysiwyg-text-align-left">Born and raised on the core of on the brazilian african culture, Urubu learned early flapping her wings in rhythm. Before meeting the machines she met the drum skin.</h4>
-                                        <h4 class="wysiwyg-text-align-left">A persona that grew within Vodoohop parties and journeys. From that to a big digging into psychedelic melting with the brazilian most folklore sounds, loads of vibrating skins, wooden samples and oscillators.</h4>
+                                        <h4 class="wysiwyg-text-align-left">A person that grew within Vodoohop parties and journeys. From that to a big digging into psychedelic melting with the brazilian most folklore sounds, loads of vibrating skins, wooden samples and oscillators.</h4>
                                         <h4 class="wysiwyg-text-align-left">Since then has frequently traveled and performed in many countries and also through many cities around Brasil, developing each time a broader and diverse exploration of all corners on music spectrum. Since for 5 years has created a solid base in Europe playing on the most prestigious festivals around the old continent, like Fusion or Nation of Gondwana.</h4>
                                         <h4 class="wysiwyg-text-align-left">Through music on gigs Urubu project is a try on a cocktail of electronic with tropical rhythmic waves, discovered grooves, soulfull machines and refreshing songs.</h4></div>
                                 </div>
@@ -390,8 +390,8 @@ For the American Tour projects the colletctive shows its face through the musica
                                 <div class="widgetContainer">
                                     <div class="textContainer">
                                         <p><strong></strong></p>
-                                        <h4 class="wysiwyg-text-align-justify">Mind bended by music at very early age, El Fo spends too much time exploring its unboundedness, guided by his deep curiosity, hunting sonorities everywhere and non stop. He could be a whole encyclopedia and maybe he is. His vast research shows itself in his crazy big selections of really specific styles of music.</h4>
-                                        <h4>Formally sound engineer in France, El Fo moved to Brasil in 2012 where he got fished by the Voodoohop gang as a first sight match since El Fo was already swimming inside random psychedelic musical choices, so common on this group spirit.</h4>
+                                        <h4 class="wysiwyg-text-align-left">Mind bended by music at very early age, El Fo spends too much time exploring its unboundedness, guided by his deep curiosity, hunting sonorities everywhere and non stop. He could be a whole encyclopedia and maybe he is. His vast research shows itself in his crazy big selections of really specific styles of music.</h4>
+                                        <h4 class="wysiwyg-text-align-left">Formally sound engineer in France, El Fo moved to Brasil in 2012 where he got fished by the Voodoohop gang as a first sight match since El Fo was already swimming inside random psychedelic musical choices, so common on this group spirit.</h4>
                                     </div>
                                 </div>
                             </div>
