--- a/collective.html
+++ b/collective.html
@@ -352,6 +352,7 @@ For the American Tour projects the colletctive shows its face through the musica
                                         <h4 class="wysiwyg-text-align-left">Thomash has &nbsp;set &nbsp;up &nbsp;one of &nbsp;the &nbsp;most influential nights in the bazooming Brazilian scene &nbsp;with &nbsp;the Voodoohop &nbsp;party, &nbsp;a &nbsp;fusion of tropical psychedelia, groovy hypnotic electronica, off-beat percussion and a pinch of hedonism. A lively mix that no doubt has its genesis in his transplanted German roots &nbsp;(he's &nbsp;from &nbsp;Cologne &nbsp;aka Kompakt­ville). He plays a very versatile mixture between live and dj set, using various controllers, drum machine and a good measure of dub delay.</h4>
                                         <h4 class="wysiwyg-text-align-left">His style is a crafty and unpretentious mix of slow techno, krautrock, layers of synth, psychedelia, deep house, dub and ritualistic tropical rhythms.</h4>
                                         <h4 class="wysiwyg-text-align-left">Interestingly; Thomash has a degree in artificial intelligence, so while it might just be our imagination, it does seem that the rhythms, full of oddly tuned percussion and colorful synth stabs seem imbued with a distinct internal logic, playful forms that bounce off each other in their own reality, according to their own laws.</h4>
+                                        <h4 class="wysiwyg-text-align-left"><a href="https://soundcloud.com/thomash_voodoohop">Soundcloud</a>
                                         <div class="wysiwyg-text-align-left">
                                             <br>
                                         </div>
@@ -391,7 +392,7 @@ For the American Tour projects the colletctive shows its face through the musica
                                     <div class="textContainer">
                                         <p><strong></strong></p>
                                         <h4 class="wysiwyg-text-align-left">Mind bended by music at very early age, El Fo spends too much time exploring its unboundedness, guided by his deep curiosity, hunting sonorities everywhere and non stop. He could be a whole encyclopedia and maybe he is.</h4>
-                                        <h4 class="wysiwyg-text-align-left">His vast research shows itself in his crazy big selections of really specific styles of music. Talent he is putting out in forms of quite interesting mix sessions with clear reference guide lines and well thought contour for its thematics. 
+                                        <h4 class="wysiwyg-text-align-left">His vast research shows itself in his crazy big selections of really specific styles of music. Talent he is putting out in forms of quite interesting mix sessions with clear reference guide lines and well thought contour for its thematics.
                                         <h4 class="wysiwyg-text-align-left">Formally sound engineer in France, El Fo moved to Brasil in 2012 where he got fished by the Voodoohop gang as a first sight match since El Fo was already swimming inside random psychedelic musical choices, so common on this group spirit.</h4>
                                     </div>
                                 </div>
