--- a/collective.html
+++ b/collective.html
@@ -353,8 +353,7 @@ For the American Tour projects the colletctive shows its face through the musica
                                         <h4 class="wysiwyg-text-align-left">His style is a crafty and unpretentious mix of slow techno, krautrock, layers of synth, psychedelia, deep house, dub and ritualistic tropical rhythms.</h4>
                                         <h4 class="wysiwyg-text-align-left">Interestingly; Thomash has a degree in artificial intelligence, so while it might just be our imagination, it does seem that the rhythms, full of oddly tuned percussion and colorful synth stabs seem imbued with a distinct internal logic, playful forms that bounce off each other in their own reality, according to their own laws.</h4>
                                         <p class="wysiwyg-text-align-left">
-                                          <a href="https://soundcloud.com/thomash_voodoohop"><font color="blue">soundcloud.com/thomash_voodoohop
-                                          <br>
+                                          <a href="https://soundcloud.com/thomash_voodoohop">soundcloud.com/thomash_voodoohop<br>
                                           <a href="https://www.facebook.com/thomash0p">facebook.com/thomash0p</font></a></p>
                                         <div class="wysiwyg-text-align-left">
                                             <br>
@@ -378,7 +377,14 @@ For the American Tour projects the colletctive shows its face through the musica
                                         <h4 class="wysiwyg-text-align-left">Born and raised on the core of on the brazilian african culture, Urubu learned early flapping her wings in rhythm. Before meeting the machines she met the drum skin.</h4>
                                         <h4 class="wysiwyg-text-align-left">A person that grew within Vodoohop parties and journeys. From that to a big digging into psychedelic melting with the brazilian most folklore sounds, loads of vibrating skins, wooden samples and oscillators.</h4>
                                         <h4 class="wysiwyg-text-align-left">Since then has frequently traveled and performed in many countries and also through many cities around Brasil, developing each time a broader and diverse exploration of all corners on music spectrum. Since for 5 years has created a solid base in Europe playing on the most prestigious festivals around the old continent, like Fusion or Nation of Gondwana.</h4>
-                                        <h4 class="wysiwyg-text-align-left">Through music on gigs Urubu project is a try on a cocktail of electronic with tropical rhythmic waves, discovered grooves, soulfull machines and refreshing songs.</h4></div>
+                                        <h4 class="wysiwyg-text-align-left">Through music on gigs Urubu project is a try on a cocktail of electronic with tropical rhythmic waves, discovered grooves, soulfull machines and refreshing songs.</h4>
+                                        <p class="wysiwyg-text-align-left">
+                                          <a href="https://soundcloud.com/urubumarinka">soundcloud.com/urubumarinka<br>
+                                          <a href="https://www.facebook.com/urubumarinka">facebook.com/urubumarinka</font></a>
+                                        </p>
+                                    <div class="wysiwyg-text-align-left">
+                                        <br>
+                                    </div>
                                 </div>
                             </div>
                             <div class="span4">
@@ -397,6 +403,11 @@ For the American Tour projects the colletctive shows its face through the musica
                                         <h4 class="wysiwyg-text-align-left">Mind bended by music at very early age, El Fo spends too much time exploring its unboundedness, guided by his deep curiosity, hunting sonorities everywhere and non stop. He could be a whole encyclopedia and maybe he is.</h4>
                                         <h4 class="wysiwyg-text-align-left">His vast research shows itself in his crazy big selections of really specific styles of music. Talent he is putting out in forms of quite interesting mix sessions with clear reference guide lines and well thought contour for its thematics.
                                         <h4 class="wysiwyg-text-align-left">Formally sound engineer in France, El Fo moved to Brasil in 2012 where he got fished by the Voodoohop gang as a first sight match since El Fo was already swimming inside random psychedelic musical choices, so common on this group spirit.</h4>
+                                        <p class="wysiwyg-text-align-left">
+                                          <a href="https://soundcloud.com/el_fo">soundcloud.com/el_fo<br>
+                                        </p>
+                                        <div class="wysiwyg-text-align-left">
+                                        <br>
                                     </div>
                                 </div>
                             </div>
