--- a/collective.html
+++ b/collective.html
@@ -383,6 +383,7 @@ For the American Tour projects the colletctive shows its face through the musica
                                           <a href="https://www.facebook.com/urubumarinka">facebook.com/urubumarinka</font></a>
                                         </p>
                                 </div>
+                              </div>
                             </div>
                             <div class="span4">
                                 <div class="widgetContainer">
