--- a/collective.html
+++ b/collective.html
@@ -453,6 +453,27 @@ For the American Tour projects the colletctive shows its face through the musica
                         </div>
                     </div>
                 </section>
+                <section class="bgSection pi-text-light-shadowed pi-custom-color spacing-top-0 spacing-bottom-15" style="">
+                    <div class="bgSectionBackgroundColor" style="background-color:#000000; opacity:1"></div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="span4">
+                                <div class="widgetContainer">
+                                    <iframe width="300" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/248303234&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                                </div>
+                            </div>
+                            <div class="span4">
+                                <div class="widgetContainer">
+                                    <iframe width="300" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215062290&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                                </div>
+                            </div>
+                            <div class="span4">
+                                <div class="widgetContainer">
+                                    <iframe width="300" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/211711180&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
 
 
