--- a/collective.html
+++ b/collective.html
@@ -321,9 +321,8 @@
                                         <div class="span8">
                                             <div class="widgetContainer">
                                                 <div class="textContainer">
-                                                    <h4 class="wysiwyg-text-align-left"><strong></strong>As already well-known by most of the followers around the world the collectiveness of Voodoohop is good mood beast with multi tentacles going from alternative living in the nature, festivals season, technologies creations, music tours and so on.
-Every year the liquid group shapes its self according to the chosen recipient.
-For the American Tour projects the colletctive shows its face through the musical projects of the three artists below.</h4></div>
+                                                    <h4 class="wysiwyg-text-align-left"><strong></strong>The collectiveness of Voodoohop is good mood beast with multi tentacles going from alternative living in the nature, festivals season, technologies creations, music tours and so on.
+Every year the liquid group shapes its self according to the chosen recipient. For the American Tour projects the colletctive shows its face through the musical projects of the three artists below.</h4></div>
                                             </div>
                                         </div>
                                     </div>
