--- a/collective.html
+++ b/collective.html
@@ -276,8 +276,6 @@
                         <div class="row">
                             <div class="span12">
                                 <div class="widgetContainer">
-                                    <div class="textContainer">
-                                        <h1 class="wysiwyg-text-align-center"><b>VOODOOHOP AMERICA TOUR 2016</b></h1></div>
                                 </div>
                                 <div class="widgetContainer">
                                     <div class="menuContainer">
@@ -321,7 +319,7 @@
                                         <div class="span8">
                                             <div class="widgetContainer">
                                                 <div class="textContainer">
-                                                    <h4 class="wysiwyg-text-align-center"><strong></strong>The collectiveness of Voodoohop is good mood beast with multi tentacles going from alternative living in the nature, festivals season, technologies creations, music tours and so on.
+                                                    <h4 class="wysiwyg-text-align-center"><strong></strong>The collectiveness of Voodoohop is a good mood beast with multi tentacles going from alternative living in the nature, festivals season, technologies creations, music tours and so on.
 <br><br>Every year the liquid group shapes its self according to the chosen recipient.<br><br>For the American Tour projects the colletctive shows its face through the musical projects of the three artists below.</h4></div>
                                             </div>
                                         </div>
