--- a/collective.html
+++ b/collective.html
@@ -276,6 +276,7 @@
                         <div class="row">
                             <div class="span12">
                                 <div class="widgetContainer">
+                                  <div class="spacer" style="height:80px"></div>
                                 </div>
                                 <div class="widgetContainer">
                                     <div class="menuContainer">
