--- a/collective.html
+++ b/collective.html
@@ -276,7 +276,9 @@
                         <div class="row">
                             <div class="span12">
                                 <div class="widgetContainer">
-                                  <div class="spacer" style="height:80px"></div>
+                                    <div class="textContainer">
+                                        <h1 class="wysiwyg-text-align-center"></h1></div>
+                                        <div class="spacer" style="height:60px"></div>
                                 </div>
                                 <div class="widgetContainer">
                                     <div class="menuContainer">
