--- a/collective.html
+++ b/collective.html
@@ -278,6 +278,7 @@
                                 <div class="widgetContainer">
                                     <div class="textContainer">
                                         <h1 class="wysiwyg-text-align-center"></h1></div>
+                                    <div class="spaceContainer xl"></div>
                                 </div>
                                 <div class="widgetContainer">
                                     <div class="menuContainer">
