--- a/collective.html
+++ b/collective.html
@@ -278,8 +278,11 @@
                                 <div class="widgetContainer">
                                     <div class="textContainer">
                                         <h1 class="wysiwyg-text-align-center"></h1></div>
+                                </div>
+                                <div class="widgetContainer">
                                     <div class="spaceContainer xl"></div>
                                 </div>
+                              </div>
                                 <div class="widgetContainer">
                                     <div class="menuContainer">
                                         <div class="navbar navbar-static-top">
