--- a/collective.html
+++ b/collective.html
@@ -282,6 +282,9 @@
                                 <div class="widgetContainer">
                                     <div class="spaceContainer xl"></div>
                                 </div>
+                                <div class="widgetContainer">
+                                    <div class="spaceContainer xl"></div>
+                                </div>
                               </div>
                                 <div class="widgetContainer">
                                     <div class="menuContainer">
