--- a/collective.html
+++ b/collective.html
@@ -283,7 +283,7 @@
                                     <div class="spaceContainer xl"></div>
                                 </div>
                                 <div class="widgetContainer">
-                                    <div class="spaceContainer xl"></div>
+                                    <div class="spaceContainer m"></div>
                                 </div>
                               </div>
                                 <div class="widgetContainer">
@@ -293,9 +293,11 @@
                                                 <button class="btn btn-navbar" data-target="#nav-57cee348cd46323be06f6b08" data-toggle="collapse" type="button"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                                                 <div class="nav-collapse collapse" id="nav-57cee348cd46323be06f6b08">
                                                     <ul class="nav pull-center">
-                                                        <li><a class="btn btn-primary navbar-btn " href="/index.html" title="TOUR DATES"><span></span>TOUR DATES</a></li>
+                                                      <font color="#dfcb68">
+                                                        <li><a class="btn btn-primary navbar-btn " href="/index.html" title="TOUR DATES" ><span></span>TOUR DATES</a></li>
                                                         <li><a class="btn btn-primary navbar-btn " href="/collective.html" title="COLLECTIVE"><span></span>COLLECTIVE</a></li>
                                                         <li><a class="btn btn-primary navbar-btn " href="/contact.html" title="CONTACT"><span></span>CONTACT</a></li>
+                                                      </fonts>
                                                     </ul>
                                                 </div>
                                             </div>
