--- a/collective.html
+++ b/collective.html
@@ -294,7 +294,7 @@
                                                 <div class="nav-collapse collapse" id="nav-57cee348cd46323be06f6b08">
                                                     <ul class="nav pull-center">
 
-                                                        <li><a class="btn btn-primary navbar-btn " href="/index.html" <font color="#dfcb68">title="TOUR DATES" ></font><span></span>TOUR DATES</a></li>
+                                                        <li><a class="btn btn-primary navbar-btn " href="/index.html" title="TOUR DATES" ><span></span>TOUR DATES</a></li>
                                                         <li><a class="btn btn-primary navbar-btn " href="/collective.html" title="COLLECTIVE"><span></span>COLLECTIVE</a></li>
                                                         <li><a class="btn btn-primary navbar-btn " href="/contact.html" title="CONTACT"><span></span>CONTACT</a></li>
                                                       
