--- a/contact.html
+++ b/contact.html
@@ -350,7 +350,7 @@
                 </section>
             </div>
             <footer>
-                <section class="bgSection pi-text-light spacing-top-2 spacing-bottom-1" style="background-position: top center; background-repeat:no-repeat; -webkit-background-size: cover; -o-background-size: cover; moz-background-size: cover; background-size: cover;background-image: url('img/header.jpg')">
+                <section class="bgSection pi-text-light spacing-top-2 spacing-bottom-1" style="background-position: top center; background-repeat:no-repeat; -webkit-background-size: cover; -o-background-size: cover; moz-background-size: cover; background-size: cover;background-image: url('img/footer.jpg')">
                     <div class="bgSectionBackgroundColor" style="; "></div>
                     <div class="container">
                         <div class="row">
