--- a/collective.html
+++ b/collective.html
@@ -495,7 +495,7 @@
 
 
             <footer>
-                <section class="bgSection pi-text-light spacing-top-2 spacing-bottom-1" style="background-position: top center; background-repeat:no-repeat; -webkit-background-size: cover; -o-background-size: cover; moz-background-size: cover; background-size: cover;background-image: url('https://86cbca82adc0a8ed40a4-f872a517e4e901849fb70edaa7a5387c.ssl.cf1.rackcdn.com/files/57cef6a001e2a73fa0062973/size_4_bg-header1.jpg')">
+                <section class="bgSection pi-text-light spacing-top-2 spacing-bottom-1" style="background-position: top center; background-repeat:no-repeat; -webkit-background-size: cover; -o-background-size: cover; moz-background-size: cover; background-size: cover;background-image: url('img/footer.jpg')">
                     <div class="bgSectionBackgroundColor" style="; "></div>
                     <div class="container">
                         <div class="row">
