--- a/index.html
+++ b/index.html
@@ -314,17 +314,17 @@
                     <div class="bgSectionBackgroundColor pi-text-light-shadowed pi-background-mainColor" style="; opacity:1"></div>
                     <div class="container">
                         <div class="row">
-                            <div class="span12">
+                            <div class="span8">
                               <div class="widgetContainer">
                                   <div class="textContainer">
                                       <p><strong></strong></p>
                                       <p><b><br></b></p>
                                       <h4><b>DATES</b></h4>
                                       <p><b><br></b></p>
-                                      <h4 class="wysiwyg-text-align-center"><b></b><b>November 2016 - USA / Mexico</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>December 2016 - Mexico / Colombia / Ecuador / Peru</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>January 2017 - Colombia / Brasil</h4>
-                                      <h4 class="wysiwyg-text-align-center"><br></h4></div>
+                                      <h4 class="wysiwyg-text-align-left"><b></b><b>November 2016 - USA / Mexico</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>December 2016 - Mexico / Colombia / Ecuador / Peru</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>January 2017 - Colombia / Brasil</h4>
+                                      <h4 class="wysiwyg-text-align-left"><br></h4></div>
                               </div>
                                 <div>
                                     <div class="row">
