--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@
                                       <p><b><br></b></p>
                                       <h4><b>DATES</b></h4>
                                       <p><b><br></b></p>
-                                      <h4 class="wysiwyg-text-align-left"><b></b><b>November 2016 - USA / Mexico</h4>
-                                      <h4 class="wysiwyg-text-align-left"><b>December 2016 - Mexico / Colombia / Ecuador / Peru</h4>
-                                      <h4 class="wysiwyg-text-align-left"><b>January 2017 - Colombia / Brasil</h4>
-                                      <h4 class="wysiwyg-text-align-left"><br></h4></div>
+                                      <h4 class="wysiwyg-text-align-center"><b></b><b>November 2016 - USA / Mexico</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>December 2016 - Mexico / Colombia / Ecuador / Peru</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>January 2017 - Colombia / Brasil</h4>
+                                      <h4 class="wysiwyg-text-align-center"><br></h4></div>
                               </div>
                             </div>
                                 <div>
