--- a/index.html
+++ b/index.html
@@ -319,11 +319,11 @@
                                   <div class="textContainer">
                                       <p><strong></strong></p>
                                       <p><b><br></b></p>
-                                      <h4><b>DATES</b></h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>DATES</b></h4>
                                       <p><b><br></b></p>
-                                      <h4 class="wysiwyg-text-align-center"><b></b><b>November 2016 - USA / Mexico</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>December 2016 - Mexico / Colombia / Ecuador / Peru</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>January 2017 - Colombia / Brasil</h4>
+                                      <h4 class="wysiwyg-text-align-center">November 2016 - USA / Mexico</h4>
+                                      <h4 class="wysiwyg-text-align-center">December 2016 - Mexico / Colombia / Ecuador / Peru</h4>
+                                      <h4 class="wysiwyg-text-align-center">January 2017 - Colombia / Brasil</h4>
                                       <h4 class="wysiwyg-text-align-center"><br></h4></div>
                               </div>
                             </div>
