--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
                                       <p><b><br></b></p>
                                       <h4 class="wysiwyg-text-align-center"><b>DATES</b></h4>
                                       <p><b><br></b></p>
-                                      <h4 class="wysiwyg-text-align-center">November 2016 - USA / Mexico</h4>
-                                      <h4 class="wysiwyg-text-align-center">December 2016 - Mexico / Colombia / Ecuador / Peru</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>November 2016</b> - USA / Mexico</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>December 2016 - Mexico / Colombia / Ecuador / Peru</h4>
                                       <h4 class="wysiwyg-text-align-center">January 2017 - Colombia / Brasil</h4>
                                       <h4 class="wysiwyg-text-align-center"><br></h4></div>
                               </div>
@@ -344,6 +344,10 @@
                                                 <div class="textContainer">
                                                     <h4 class="wysiwyg-text-align-left">VOODOOHOP is an outlandish art collective born from a series of underground parties and is now a striking artistic movement in Brazil. Through 6 years of collaborative events, Voodoohop has gathered a myriad of artists from different disciplines with the likes of Djs, live performers, dancers and visual artists. Together they have created a multi sensory tropical cabaret, mixing colourful and exuberant visuals, combined with elements of Brasilian traditional heritage and ritualistic performance. Nomadic in nature, the collective has transformed spaces ranging from abandoned buildings to natural hideaways. Always experimenting with different media and formats, Voodoohop is in constant flux.</h4></div>
                                             </div>
+                                            <p class="wysiwyg-text-align-left">
+                                              <a href="https://soundcloud.com/voodoohop">soundcloud.com/voodoohop<br>
+                                              <a href="https://www.facebook.com/voodoohop">facebook.com/voodoohop</font></a>
+                                            </p>
                                         </div>
                                         <div class="span2">
                                             <div class="widgetContainer">
