--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
                                       <h4 class="wysiwyg-text-align-center"><b>DATES</b></h4>
                                       <p><b><br></b></p>
                                       <h4 class="wysiwyg-text-align-center"><b>November 2016</b> - USA / Mexico</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>December 2016 - Mexico / Colombia / Ecuador / Peru</h4>
-                                      <h4 class="wysiwyg-text-align-center">January 2017 - Colombia / Brasil</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>December 2016</b> - Mexico / Colombia / Ecuador / Peru</h4>
+                                      <h4 class="wysiwyg-text-align-center">January 2017</b> - Colombia / Brasil</h4>
                                       <h4 class="wysiwyg-text-align-center"><br></h4></div>
                               </div>
                             </div>
