--- a/contact.html
+++ b/contact.html
@@ -295,7 +295,7 @@
                                                     <ul class="nav pull-center">
 
                                                         <li><a class="btn btn-primary navbar-btn " href="/index.html" title="TOUR DATES" ><span></span>TOUR DATES</a></li>
-                                                        <li><a class="btn btn-primary navbar-btn " href="/collective.html" title="COLLECTIVE"><span></span>COLLECTIVE</a></li>
+                                                        <li><a class="btn btn-primary navbar-btn " href="/on_the_road.html" title="ON THE ROAD"><span></span>ON THE ROAD</a></li>
                                                         <li><a class="btn btn-primary navbar-btn " href="/contact.html" title="CONTACT"><span></span>CONTACT</a></li>
 
                                                     </ul>
