--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                                                     <ul class="nav pull-center">
 
                                                         <li><a class="btn btn-primary navbar-btn " href="/index.html" title="TOUR DATES" ><span></span>TOUR DATES</a></li>
-                                                        <li><a class="btn btn-primary navbar-btn " href="/collective.html" title="COLLECTIVE"><span></span>COLLECTIVE</a></li>
+                                                        <li><a class="btn btn-primary navbar-btn " href="/on_the_road.html" title="ON THE ROAD"><span></span>ON THE ROAD</a></li>
                                                         <li><a class="btn btn-primary navbar-btn " href="/contact.html" title="CONTACT"><span></span>CONTACT</a></li>
 
                                                     </ul>
@@ -323,7 +323,7 @@
                                       <p><b><br></b></p>
                                       <h4 class="wysiwyg-text-align-center"><b>November 2016</b> - USA / Mexico</h4>
                                       <h4 class="wysiwyg-text-align-center"><b>December 2016</b> - Mexico / Colombia / Ecuador / Peru</h4>
-                                      <h4 class="wysiwyg-text-align-center">January 2017</b> - Colombia / Brasil</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>January 2017</b> - Colombia / Brasil</h4>
                                       <h4 class="wysiwyg-text-align-center"><br></h4></div>
                               </div>
                             </div>
