--- a/on_the_road.html
+++ b/on_the_road.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>VOODOOHOP - Collective</title>
-    <link href="collective.html" rel="canonical" />
-    <meta content="voodoohop collective" name="description" />
+    <title>VOODOOHOP - On the road</title>
+    <link href="on_the_road.html" rel="canonical" />
+    <meta content="voodoohop on the road" name="description" />
     <meta content="en" name="language" />
     <meta charset="utf-8" />
     <script type="text/javascript">
