--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>VOODOOHOP - Tour Dates</title>
     <link href="index.html" rel="canonical" />
-    <meta content="Home" name="description" />
+    <meta content="Voodoohop - Tour dates" name="description" />
     <meta content="en" name="language" />
     <meta charset="utf-8" />
     <script type="text/javascript">
