dates  to availability

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                   <div class="textContainer">
                                       <p><strong></strong></p>
                                       <p><b><br></b></p>
-                                      <h4 class="wysiwyg-text-align-center"><b>DATES</b></h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>AVAILABILITY</b></h4>
                                       <p><b><br></b></p>
                                       <h4 class="wysiwyg-text-align-center"><b>November 2016</b> - USA / Mexico</h4>
                                       <h4 class="wysiwyg-text-align-center"><b>December 2016</b> - Mexico / Colombia / Ecuador / Peru</h4>
