--- a/on_the_road.html
+++ b/on_the_road.html
@@ -294,9 +294,9 @@
                                                 <div class="nav-collapse collapse" id="nav-57cee348cd46323be06f6b08">
                                                     <ul class="nav pull-center">
 
-                                                        <li><a class="btn btn-primary navbar-btn " href="/index.html" title="DATES" ><span></span>DATES</a></li>
-                                                        <li><a class="btn btn-primary navbar-btn " href="/on_the_road.html" title="ON THE ROAD"><span></span>ON THE ROAD</a></li>
-                                                        <li><a class="btn btn-primary navbar-btn " href="/contact.html" title="CONTACT"><span></span>CONTACT</a></li>
+                                                        <li><a class="btn btn-primary navbar-btn " href="/index.html" title="DATES" ><span></span><b>DATES</b></a></li>
+                                                        <li><a class="btn btn-primary navbar-btn " href="/on_the_road.html" title="ON THE ROAD"><span></span><b>ON THE ROAD</b></a></li>
+                                                        <li><a class="btn btn-primary navbar-btn " href="/contact.html" title="CONTACT"><span></span><b>CONTACT</b></a></li>
 
                                                     </ul>
                                                 </div>
