--- a/index.html
+++ b/index.html
@@ -317,11 +317,14 @@
                                   <div class="textContainer">
                                       <p><strong></strong></p>
                                       <p><b><br></b></p>
-                                      <h4 class="wysiwyg-text-align-center"><b>AVAILABILITY</b></h4>
-                                      <p><b><br></b></p>
-                                      <h4 class="wysiwyg-text-align-center"><b>November 2016</b> - USA / Mexico</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>December 2016</b> - Mexico / Colombia / Ecuador / Peru</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>January 2017</b> - Colombia / Brasil</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>4th of November 2016 </b> - USA - Oakland </h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>11th of November 2016</b> - USA - San Francisco - Tea House</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>12th of November 2016</b> - USA - San Francisco</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>18th of November 2016</b> - USA - New York - Caravane Gitane</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>TBC - 19th of November 2016</b> - Canada - Montreal</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>4th of December 2016</b> - Mexico - Acapulco - Tropico Festival</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>8th of December 2016</b> - Mexico - Mexico City - Cafe Paraiso</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>16th of December 2016</b> - Colombia - Bogota - Video Club</h4>
                                       <h4 class="wysiwyg-text-align-center"><br></h4></div>
                               </div>
                             </div>
