--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                                       <p><b><br></b></p>
                                       <h4 class="wysiwyg-text-align-center"><b>4th of November 2016 </b> - USA - Oakland </h4>
                                       <h4 class="wysiwyg-text-align-center"><b>11th of November 2016</b> - USA - San Francisco - Tea House</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>12th of November 2016</b> - USA - San Francisco</h4>
+                                      <h4 class="wysiwyg-text-align-center"><b>12th of November 2016</b> - USA - California</h4>
                                       <h4 class="wysiwyg-text-align-center"><b>18th of November 2016</b> - USA - New York - Caravane Gitane</h4>
                                       <h4 class="wysiwyg-text-align-center"><b>TBC - 19th of November 2016</b> - Canada - Montreal</h4>
                                       <h4 class="wysiwyg-text-align-center"><b>4th of December 2016</b> - Mexico - Acapulco - Tropico Festival</h4>
