--- a/index.html
+++ b/index.html
@@ -317,15 +317,15 @@
                                   <div class="textContainer">
                                       <p><strong></strong></p>
                                       <p><b><br></b></p>
-                                      <h4 class="wysiwyg-text-align-center"><b>4th of November 2016 </b> - USA - Oakland - Strategic Reserve</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>8th of November 2016 </b> - USA - Oakland - Post-Election Sound System</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>18th of November 2016</b> - USA - New York - Caravane Gitane</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>19th of November 2016</b> - Canada - Montreal</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>4th of December 2016</b> - Mexico - Acapulco - Tropico Festival</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>8th of December 2016</b> - Mexico - Mexico City - Cafe Paraiso</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>16th of December 2016</b> - Colombia - Bogota - Video Club</h4>
-                                      <h4 class="wysiwyg-text-align-center"><b>2nd of January 2017</b> - Colombia - Sierra Nevada de Santa Marta</h4>
-                                      <h4 class="wysiwyg-text-align-center"><br></h4></div>
+                                      <h4 class="wysiwyg-text-align-left"><b>4th of November 2016 </b> - USA - Oakland - Strategic Reserve</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>8th of November 2016 </b> - USA - Oakland - Post-Election Sound System</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>18th of November 2016</b> - USA - New York - Caravane Gitane</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>19th of November 2016</b> - Canada - Montreal</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>4th of December 2016</b> - Mexico - Acapulco - Tropico Festival</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>8th of December 2016</b> - Mexico - Mexico City - Cafe Paraiso</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>16th of December 2016</b> - Colombia - Bogota - Video Club</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>2nd of January 2017</b> - Colombia - Sierra Nevada de Santa Marta</h4>
+                                      <h4 class="wysiwyg-text-align-left"><br></h4></div>
                               </div>
                             </div>
                                 <div>
