--- a/index.html
+++ b/index.html
@@ -319,8 +319,10 @@
                                       <p><b><br></b></p>
                                       <h4 class="wysiwyg-text-align-left"><b>4th of November 2016 </b> - USA - Oakland - Strategic Reserve</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>8th of November 2016 </b> - USA - Oakland - Post-Election Sound System</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>8th of November 2016 </b> - USA - San Francisco - Thé</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>18th of November 2016</b> - USA - New York - Caravane Gitane</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>19th of November 2016</b> - Canada - Montreal</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>25th of November 2016</b> - USA - New York - Nublu</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>4th of December 2016</b> - Mexico - Acapulco - Tropico Festival</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>8th of December 2016</b> - Mexico - Mexico City - Cafe Paraiso</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>16th of December 2016</b> - Colombia - Bogota - Video Club</h4>
