--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
                                       <h4 class="wysiwyg-text-align-left"><b>12th of November 2016 </b> - USA - San Francisco - Thé</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>18th of November 2016</b> - USA - New York - Caravane Gitane</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>19th of November 2016</b> - Canada - Montreal - Multi Culti x Voodoohop</h4>
+                                      <h4 class="wysiwyg-text-align-left"><b>19th of November 2016</b> - Canada - Montreal - Show at n10.as Radio</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>25th of November 2016</b> - USA - New York - Nublu</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>4th of December 2016</b> - Mexico - Acapulco - Tropico Festival</h4>
                                       <h4 class="wysiwyg-text-align-left"><b>8th of December 2016</b> - Mexico - Mexico City - Cafe Paraiso</h4>
