--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
-					{ src: 'plugin/multiplex/client.js', async: true }
+					{ src: '//cdn.socket.io/socket.io-1.3.5.js' },
+					{ src: 'plugin/multiplex/client.js' }
 				]
 			});
 		</script>
