--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		// Example values. To generate your own, see the socket.io server instructions.
 		secret: null, // null so the clients do not have control of the master presentation
 		id: 'd2368abdaebbea66', // id, obtained from socket.io server
-		url: 'https://reveal-js-multiplex-ccjbegmaii.now.sh' // Location of your socket.io server
+		url: 'http://cors.io/?u=https://reveal-js-multiplex-ccjbegmaii.now.sh' // Location of your socket.io server
 	},
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
