changed password parameter

--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -222,7 +222,7 @@
 
 
 const urlParams = new URLSearchParams(window.location.search);
-const password = urlParams.get('pw');
+const password = urlParams.get('pass');
 if (password != "albi")
 		document.getElementById("container").style.display ="none";
 
