--- a/swarm/index.html
+++ b/swarm/index.html
@@ -1,23 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head><link rel="stylesheet" href="/scripts.661aeb4a.css">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
-  <title>swarm animism</title>
-</head>
-<body id="background">
-
-  <div class="error" id="error">
-    >_ Precondition Failed Error<br>
-    <br>
-    Use your skills relevant to the context
-  </div>
-  <button class="start" id="start">Join</button>
-  <div class="screen" id="main"></div>
-  <div class="control" id="control">
-    <button class="control__button" data-agent="impulse">Impulse</button>
-    <button class="control__button" data-agent="flocking">Flocking</button>
-  </div>
-  <script src="/scripts.aa28ae9b.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><link rel="stylesheet" href="/scripts.3871e9db.css"><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><title>swarm animism</title></head><body id="background"> <div class="error" id="error"> >_ Precondition Failed Error<br> <br> Use your skills relevant to the context </div> <button class="start" id="start">Join</button> <div class="screen" id="main"></div> <div class="control" id="control"> <button class="control__button" data-agent="impulse">Impulse</button> <button class="control__button" data-agent="flocking">Flocking</button> </div> <script src="/scripts.794546a5.js"></script>
+</body></html>
