make tsne default

--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -153,7 +153,7 @@
 								for="method-list-option-1">
 								<input type="radio" id="method-list-option-1" class="mdl-radio__button"
 									name="methodoptions" value="umap" oninput="updateGraph()"
-									onchange="updateGraph()" checked />
+									onchange="updateGraph()"  />
 							</label>
 						</span>
 					</li>
@@ -166,7 +166,7 @@
 							<label class="demo-list-radio mdl-radio mdl-js-radio mdl-js-ripple-effect"
 								for="method-list-option-2">
 								<input type="radio" id="method-list-option-2" class="mdl-radio__button"
-									name="methodoptions" value="tsne" oninput="updateGraph()" onchange="updateGraph()"
+									name="methodoptions" value="tsne" oninput="updateGraph()" onchange="updateGraph()" checked
 									 />
 							</label>
 						</span>
